<resources>
    <string name="font_gotham_black">fonts/Gotham-Black.otf</string>
    <string name="font_gotham_black_italic">fonts/Gotham-Black Italic.otf</string>
    <string name="font_gotham_bold">fonts/Gotham-Bold.otf</string>
    <string name="font_gotham_bold_italic">fonts/Gotham-Bold Italic.otf</string>
    <string name="font_gotham_book">fonts/Gotham-Book.otf</string>
    <string name="font_gotham_book_italic">fonts/Gotham-Book Italic.otf</string>
    <string name="font_gotham_extra_light">fonts/Gotham-Extra Light.otf</string>
    <string name="font_gotham_extra_light_italic">fonts/Gotham-Extra Light Italic.otf</string>
    <string name="font_gotham_light">fonts/Gotham-Light.otf</string>
    <string name="font_gotham_light_italic">fonts/Gotham-Light Italic.otf</string>
    <string name="font_gotham_medium">fonts/Gotham-Medium.otf</string>
    <string name="font_gotham_medium_italic">fonts/Gotham-Medium Italic.otf</string>
    <string name="font_gotham_thin">fonts/Gotham-Thin.otf</string>
    <string name="font_gotham_thin_italic">fonts/Gotham-Thin Italic.otf</string>
    <string name="font_gotham_ultra">fonts/Gotham-Ultra.otf</string>
    <string name="font_gotham_ultra_italic">fonts/Gotham-Ultra Italic.otf</string>
    <string name="font_actionbar_title">@string/font_gotham_bold</string>
    <string name="font_drawer_item_title">@string/font_gotham_bold</string>
    <string name="font_divider_title">@string/font_gotham_black</string>
    <string name="font_tutorial_button">@string/font_gotham_book</string>
    <string name="action_title_drawer">Universal Orlando</string>
    <string name="action_title_home">Home</string>
    <string name="action_title_search">Search</string>
    <string name="action_title_alerts">My Alerts</string>
    <string name="action_title_single_rider">Single Rider Line</string>
    <string name="action_title_package_pickup">Package Pick-Up Available</string>
    <string name="action_title_coke_freestyle">Coca-Cola freestyle&#174; Available</string>
    <string name="action_title_child_swap">Child Swap</string>
    <string name="action_title_express_pass_locations">Purchase Locations</string>
    <string name="action_title_express_pass"><![CDATA[Universal Express<sup><small>SM</small></sup>]]></string>
    <string name="action_title_food_allergy">Food Allergies</string>
    <string name="action_title_park_notification">Park Notification</string>
    <string name="action_title_dining_plans">Universal Dining Plans</string>
    <string name="action_title_dining_menu">Dining Menu</string>
    <string name="action_title_newsletter">Newsletter Sign Up</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_guide_me">Guide Me</string>
    <string name="action_map">Map</string>
    <string name="action_list">List</string>
    <string name="action_alerts">My Alerts</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_buytickets">View Cart</string>
    <string name="action_discard">Discard</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_mark_all_as_read">Mark All As Read</string>
    <string name="action_advanced_filter">Advanced Filter</string>
    <string name="action_event_timeline">Today\'s Events</string>
    <string name="action_event_series">Event Series</string>
    <string name="action_title_ticket_detail">Ticket Detail</string>
    <string name="action_return_time_ticket">Virtual Line&#8482; Pass</string>
    <string name="action_return_time_ticket_get_title">Get</string>
    <string name="action_return_time_ticket_detail_done">Done</string>
    <string name="action_appointment_ticket_menu_item_edit">Edit</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_login">Sign In</string>
    <string name="drawer_item_view_profile">My Account</string>
    <string name="drawer_item_favorites">My Favorites</string>
    <string name="drawer_item_my_appointment_tickets">My Appointments</string>
    <string name="drawer_item_recommended">Recommended</string>
    <string name="drawer_item_park_news">Park Notifications</string>
    <string name="drawer_item_buy_tickets">Buy Tickets</string>
    <string name="drawer_header_buy">Buy</string>
    <string name="drawer_item_tickets">Tickets</string>
    <string name="drawer_item_hh">Hollywood Horror Nights</string>
    <string name="drawer_item_express_pass">Express Pass</string>
    <string name="drawer_item_extras">Extras</string>
    <string name="drawer_item_ticket_bmg_bundle">Ticket + BMG</string>
    <string name="drawer_item_ticket_uep_bundle">Ticket + UEP</string>
    <string name="drawer_item_web_tickets">Web Tickets</string>
    <string name="drawer_item_wallet">Wallet</string>
    <string name="drawer_item_parking_reminder">Parking Reminder</string>
    <string name="drawer_header_shop">SHOP</string>
    <string name="drawer_header_explore_parks_and_hotels">EXPLORE PARKS &amp; HOTELS</string>
    <string name="drawer_item_islands_of_adventure">Islands of Adventure</string>
    <string name="drawer_item_volcano_bay">Universal\'s Volcano Bay</string>
    <string name="drawer_item_universal_studios_florida">Universal Studios</string>
    <string name="drawer_item_citywalk_orlando">Universal CityWalk</string>
    <string name="drawer_item_wet_n_wild">Wet \'n Wild Orlando</string>
    <string name="drawer_item_hotels">On-site Hotels</string>
    <string name="drawer_header_explore_all_activities">EXPLORE ALL RESORT ACTIVITIES</string>
    <string name="drawer_item_rides">Rides</string>
    <string name="drawer_item_wait_times">Wait Times</string>
    <string name="drawer_item_shows">Shows</string>
    <string name="drawer_item_dining">Dining</string>
    <string name="drawer_item_shopping">Shopping</string>
    <string name="drawer_header_guest_amenities">GUEST AMENITIES</string>
    <string name="drawer_item_restrooms">Restrooms</string>
    <string name="drawer_item_lockers">Lockers</string>
    <string name="drawer_item_guest_services">Guest Services</string>
    <string name="drawer_item_guest_services_locations">Guest Services Locations</string>
    <string name="drawer_item_atms">ATMs</string>
    <string name="drawer_item_charging_stations">Charging Stations</string>
    <string name="drawer_item_lost_and_found">Lost &amp; Found</string>
    <string name="drawer_item_first_aid">First Aid</string>
    <string name="drawer_item_service_animal_rest_areas">Service Animal Rest Areas</string>
    <string name="drawer_item_smoking_areas">Smoking Permitted Areas</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_hours_and_directions">Hours &amp; Directions</string>
    <string name="drawer_item_settings_and_about">Settings</string>
    <string name="drawer_item_privacy_and_legal">Privacy &amp; Legal</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_events">Events</string>
    <string name="drawer_item_amenities"> </string>
    <string name="drawer_item_gateways">Getting Around</string>
    <string name="drawer_item_general_locations">General Locations</string>
    <string name="drawer_item_wifi">Free In-Park WiFi</string>
    <string name="drawer_item_amex_special_offers">AMEX Special Offers</string>
    <string name="drawer_item_rental_services">Rental Services</string>
    <string name="drawer_item_contact_guest_services">Contact Guest Services</string>
    <string name="drawer_error_unable_to_open_wnw">Oops! Wet \'n Wild Orlando data is missing.</string>
    <string name="drawer_open_drawer_content_description">Open the navigation menu drawer</string>
    <string name="drawer_close_drawer_content_description">Close the navigation menu drawer</string>
    <string name="drawer_item_log_out">Sign Out</string>
    <string name="drawer_header_explore_parks_and_events">PARKS &amp; EVENTS</string>
    <string name="drawer_item_universal_studios_hollywood">Universal Studios</string>
    <string name="drawer_item_citywalk_hollywood">Universal CityWalk</string>
    <string name="drawer_header_help_and_support">HELP &amp; SUPPORT</string>
    <string name="drawer_item_live_chat">Live Chat</string>
    <string name="drawer_item_contact_us">Contact Us</string>
    <string name="drawer_item_faqs">FAQs</string>
    <string name="splash_failed_sync_title">Unable to sync park data</string>
    <string name="splash_failed_sync_message">Check your internet connection and try again. If the problem persists, our servers may be experiencing issues.</string>
    <string name="splash_failed_sync_confirm_button">OK</string>
    <string name="splash_loading_content_description">Loading Universal Orlando Resort</string>
    <string name="splash_tagline">The Entertainment Capital of LA\u2120</string>
    <string name="list_no_results_title">No Results Found</string>
    <string name="list_no_results_message">Try refining with \nless specific options.</string>
    <string name="list_no_favorites_title">You don\'t have any favorites yet!</string>
    <string name="list_no_favorites_message_part_1">Tap the</string>
    <string name="list_no_favorites_message_part_2">to favorite an item</string>
    <string name="list_upcoming_events_footer_message">Select event activities are on a first-come, first-served basis. Event occurs rain or shine. No rain checks, returns or refunds. Prices, times, dates and entertainment are subject to change without notice. Additional restrictions may apply.</string>
    <string name="favorite_toggle_button_on_formatted_content_description">%1$s is favorited</string>
    <string name="favorite_toggle_button_off_formatted_content_description">%1$s is not favorited</string>
    <string name="poi_list_item_venue_name_hotel">On-site Hotel</string>
    <string name="poi_list_item_venue_name_waterpark">Water Park</string>
    <string name="poi_list_item_guide_me">GUIDE ME</string>
    <string name="poi_list_item_guide_me_formatted_content_description">Guide me to %1$s</string>
    <string name="poi_list_item_dining_has_healthy_options_info">Vegetarian/Healthy Options</string>
    <string name="poi_list_item_lockers_rental_info">See locker attendant for rates</string>
    <string name="poi_circle_badge_starts">STARTS</string>
    <string name="poi_circle_badge_opens">OPENS</string>
    <string name="poi_circle_badge_min_wait">MIN WAIT</string>
    <string name="poi_circle_badge_weather">WEATHER</string>
    <string name="poi_circle_badge_closed">CLOSED</string>
    <string name="poi_circle_badge_temp">TEMPORARY</string>
    <string name="poi_circle_badge_at_capacity">At\nCapacity</string>
    <string name="poi_circle_badge_min_wait_content_description">minute wait</string>
    <string name="about_wifi_header_how_to_connect">HOW TO CONNECT</string>
    <string name="about_wifi_subtitle">ALL PARKS</string>
    <string name="about_wifi_title">Free In-Park WiFi</string>
    <string name="about_wifi_message">Complimentary XFINITY WiFi is now available throughout Universal Studios Florida, Universal\'s Islands of Adventure and Universal CityWalk. It\'s easy to get connected and can help save cellular data.</string>
    <string name="about_wifi_message_content_description">Complimentary xfinity WiFi is now available throughout Universal Studios Florida, Universal\'s Islands of Adventure and Universal CityWalk. It\'s easy to get connected and can help save cellular data.</string>
    <string name="about_wifi_badge_free">FREE!</string>
    <string name="about_wifi_xfinity_logo_content_description">xfinity WiFi</string>
    <string name="event_series_detail_tab_about">About</string>
    <string name="event_series_detail_tab_activities">Events</string>
    <string name="event_series_detail_tab_attractions">Attractions</string>
</resources>